@@ -54,6 +54,8 @@ version 2.0.0:
 	* Jabber support for SRV lookups
 	* When opening the log viewer, show the most recent log by default
 	  (Peter McCurdy)
+	* Control-Shift-Tab will reverse cycle through the conversation tabs
+	  (James Vega)
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
